remoed columns and added synergies
