# app/controllers/cards_controller.rb
@@ -71,6 +71,6 @@ class CardsController < ApplicationController
   # Only allow a list of trusted parameters through.
   def card_params
     params.require(:card).permit(:card_id, :title, :type, :description, :image, :action, :draw_chance, :level, :element, :bad_things, :rewards_treasure, :good_against, :bad_against,
-                                 :good_against_value, :bad_against_value, :element_modifier, :atk_points, :item_category, :has_combination, :level_amount)
+                                 :good_against_value, :bad_against_value, :atk_points, :item_category, :has_combination, :level_amount)
   end
 end
