# app/models/itemcard.rb
@@ -1,7 +1,7 @@
 # frozen_string_literal: true
 
 class Itemcard < Card
-  validates :title, :description, :image, :action, :draw_chance, :element_modifier, :atk_points, :has_combination, :item_category, :type, presence: true
+  validates :title, :description, :image, :action, :draw_chance, :atk_points, :has_combination, :item_category, :type, presence: true
 
   def self.activate(card)
     case card.action # get the action from card
